Fix .hero-container alignment
Began implementing fixes for the .hero-containment alignment issues
including adding a responsive max-width of 40% to .hero-text and
.hero-image

--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ ul {
 
 .hero-container{
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
+    justify-content: space-between;
 }
 
 .header, .hero-container, .footer {
@@ -56,6 +57,7 @@ a, .secondary-hero-text{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 40%;
 }
 
 .hero-button{
@@ -74,8 +76,7 @@ a, .secondary-hero-text{
 }
 
 .hero-image{
-    width: 400px;
-    min-width: 250px;
+    max-width: 40%;
 }
 
 .info-container{
